# PICO-BK

./: .gitignore  CMakeLists.txt  README.md  bk.conf  build.bat
BKemu/BK/: AboutDlg.h  BK.h  BKDoc.h  BKSettPage_1.h  BKSettPage_2.h  BKSettPage_3.h  BKSettingsDlg.h  BKVKBDView.h  BKView.h  BaseDialog.h  Config.h  DisasmView.h  DocPaneDlgViewBase.h  MainFrm.cpp  MainFrm.h  MemDumpView.h  OscillatorView.h  RegDumpViewCPU.h  RegDumpViewFDD.h  SafeReleaseDefines.h  SliderButton.h  StaticLink.h  TapeCtrlView.h  framework.h  resource.h  targetver.h  variables.h
BKemu/BK/devemu/: AYSnd.cpp  BKMessageBox.cpp  BKMessageBox.h  BKSoundDevice.cpp  BKSoundDevice.h  BKSound_Defines.h  BkSound.cpp  BkSound.h  Board.cpp  Board.h  Board_11M.h  CPU.cpp  CPU.h  Config.cpp  Config.h  Covox.cpp  DEFAULT_CPU_MAP.h  DEFAULT_CPU_VM1G_MAP.h  Device.h  FDDController.cpp  FDDController.h  FloppyDrive.cpp  FloppyDrive.h  HDD.h  LockVarType.h  MSFManager.h  Menestrel.cpp  SafeReleaseDefines.h  Screen.h  ScreenColors_Shared.cpp  Screen_Shared.h  Speaker.cpp  Tape.cpp  Tape.h  emu2149.cpp
BKemu/BK/emutools/: BKKbdButn.h  BKOscScr.h  BKOscScr_Shared.h  BreakPoint.h  Debugger.h  DisasmCtrl.h  DropTarget.h  DumpListCtrl.h  EnterEditCtrl.h  LoadImgDlg.h  MultiEditListCtrl.h  PrintDlg.h  ScriptRunner.h  TapeManagerDlg.h
BKemu/shared/: CFile.cpp  CFile.h  HDIStuff.h  Ini.cpp  Ini.h  afx.h  pch.h
disks/: 00.IMG  MKDOS318B.img  SNAP001001.h
drivers/audio/: audio.c  audio.h
drivers/libdvi/: CMakeLists.txt  bk.c  data_packet.c  data_packet.h  dvi.c  dvi_config_defs.h  dvi_timing.c  tmds_encode.S  tmds_encode.h
drivers/nespad/: nespad.cpp  nespad.h
drivers/ps2/: ps2.c  ps2.h
drivers/ps2kbd/: ps2.h  ps2kbd_mrmltr.cpp
drivers/usb/: CMakeLists.txt  hid_app.cpp  joy_hid.cpp  msc_disk.c  usb.c  usb_descriptors.c
drivers/vga/: include.h
drivers/vga-nextgen/: fnt8x16.h  fnt8x8.h  vga.c  vga.h
soft/: board.h
soft/EmuAPP/: Makefile
soft/EmuAPP/ROM/: 018_bk0010_focal.h  BK0010.rom  BK0010_ROM.h  BOS_N_DISK_327.h  DISK_326.rom.h  DISK_326v12.ROM.h  DISK_327ROM.h  FDDROM.h  Focal.h  ROM.h  ROM10.h  ROM11.h  Tests.h  bk10_018_focal.rom.h  bk10_084_focal.h  bk10_084_focal.rom  bk11m_328_basic2.rom  bk11m_329_basic3.rom  bk11m_330_mstd.h  mkrom.c  smk512.h  smk512.rom
soft/EmuAPP/ld/: RAM_layout.txt  eagle.app.v6.ld
soft/EmuAPP/src/: AnyMem.c  AnyMem.h  CPU.c  CPU.h  CPU_bk.h  Debug.c  Debug.h  IntVectors.as8  Key.c  Key.h  Startup.as8  Startup.c  crc8.c  crc8.h  emu.c  emu.h  esp8266.h  ets.h  ffs.c  ffs.h  fileman.c  fileman.h  gpio_lib.h  i2s.c  i2s.h  main.c  main.h  menu.c  menu.h  ovl.c  ovl.h  ovl_FuncDesc.h  pin_mux_register.h  ps2.c  ps2.h  ps2_bk.h  ps2_codes.h  reboot.c  reboot.h  spi_flash.c  (+15 more)
soft/EmuAPP/src/Overlays/Emu/: CPU_e.c  CPU_e.h  emu_e.c  emu_e.h
soft/EmuAPP/src/Overlays/EmuFfs/: CPU_ef.c  CPU_ef.h  emu_ef.c  emu_ef.h
soft/EmuAPP/src/Overlays/EmuUi/: Key_eu.c  Key_eu.h  ps2_eu.c  ps2_eu.h
soft/EmuAPP/src/Overlays/Ffs/: ffs_f.c  ffs_f.h  spi_flash_f.c  spi_flash_f.h  tape_f.c  tape_f.h
soft/EmuAPP/src/Overlays/FfsUi/: crc8_fu.c  crc8_fu.h  ffs_fu.c  ffs_fu.h  str_fu.c  str_fu.h
soft/EmuAPP/src/Overlays/Init/: CPU_i.c  CPU_i.h  crc8_i.c  crc8_i.h  ffs_i.c  ffs_i.h  i2s_i.c  i2s_i.h  main_i.c  main_i.h  ps2_i.c  ps2_i.h  spi_flash_i.c  spi_flash_i.h  tv_i.c  tv_i.h
soft/EmuAPP/src/Overlays/Ui/: fileman_u.c  fileman_u.h  menu_u.c  menu_u.h  str_u.c  str_u.h  ui_u.c  ui_u.h  xprintf_u.c  xprintf_u.h
soft/WiFiAPP/src/: main.cpp
soft/ask2asm/: ask2asm.cpp
soft/esptool2/: elf.h  esptool2.c  esptool2.h  esptool2_elf.c  esptool2_elf.h
soft/mkfw/: mkfw.c
src/: PinSerialData_595.c  PinSerialData_595.h  aySoundSoft.c  aySoundSoft.h  config_em.h  debug.h  disk.c  disk_img.cpp  disk_img.h  emulator.h  fdd.c  fdd.h  fdd_controller.cpp  fdd_controller.h  main.cpp  manager.c  manager.h  mkdos.cpp  mkdos.h  pico-vision.c  pico-vision.h  ram_config.h  ram_page.c  ram_page.h  util_Wii_Joy.c  util_Wii_Joy.h
src/audio/: blaster.c
src/imgos/: BKDEDefines.h  BKDRT11Header.h  BKDirDataItem.h  BKFloppyImage_ANDos.cpp  BKFloppyImage_ANDos.h  BKFloppyImage_AODos.cpp  BKFloppyImage_AODos.h  BKFloppyImage_Csidos3.cpp  BKFloppyImage_Csidos3.h  BKFloppyImage_DaleOS.cpp  BKFloppyImage_DaleOS.h  BKFloppyImage_HCDos.cpp  BKFloppyImage_HCDos.h  BKFloppyImage_Holography.cpp  BKFloppyImage_Holography.h  BKFloppyImage_MKDos.cpp  BKFloppyImage_MKDos.h  BKFloppyImage_MSDOS.cpp  BKFloppyImage_MSDOS.h  BKFloppyImage_MicroDos.cpp  BKFloppyImage_MicroDos.h  BKFloppyImage_NORD.cpp  BKFloppyImage_NORD.h  BKFloppyImage_Optok.cpp  BKFloppyImage_Optok.h  BKFloppyImage_Prototype.cpp  BKFloppyImage_Prototype.h  BKFloppyImage_RT11.cpp  BKFloppyImage_RT11.h  BKImage.cpp  BKImage.h  BKImgFile.cpp  BKImgFile.h  BKParseImage.cpp  BKParseImage.h  ImgUtil.cpp  ImgUtil.h  StringUtil.cpp  StringUtil.h  pch.h
